[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
serde = {version="1.0.152", optional=true}
serde_json = { version="1.0.93", optional=true}
tokio = { version = "1.25.0", features = ["full"] }
